css/stealourcontent.css
a.soc_button {
  text-decoration: none;
  display: inline-block;
  font-size: 1.2em;
  text-align: center;
  padding: 8px;
  background-image: -webkit-linear-gradient(#707070, #909090);
  background-image: linear-gradient(#707070, #909090);
  background-color: #909090;
  border: 1px solid #707070;
  box-shadow: inset 0 1px 0 0 #bbbbbb,0 1px 0 0 rgba(255,255,255,0.75);
  color: #fff;
  margin-bottom: 0;
  margin-top: 0;
  text-shadow: 0 1px 0 rgba(0,0,0,0.35);
}

a.soc_button:hover {
  color: #fff;
  background-image: -webkit-linear-gradient(#606060, #757575);
  background-image: linear-gradient(#555555, #707070);
  background-color: #707070;
  text-decoration: none;
}
  
#soc_modal_wrapper {
  position: relative;
}
#soc_modal_wrapper textarea {
  width: 80%;
  height: 400px;
}
#soc_modal_wrapper #soc_license {
  position: absolute;
  right: 10px;
  top: 10px;
}
#soc_modal_wrapper #soc_license img {
  width: 100px;
}
#modalContent a.close img {
  margin-left: 10px;
}

